--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
 <body>
     <!-- Header Section -->
     <header>
-        <h1>Project Title</h1>
-        <p>A short subtitle or tagline about your project</p>
+        <h1>Investigation Towards Recipes</h1>
+        <p>A thorough analysis on the dataset from <a href="https://www.food.com/">Food/</a> </p>
     </header>
 
     <!-- Main Content Container -->
@@ -97,9 +97,68 @@
         <!-- Introduction Section -->
         <section>
             <h2>Introduction</h2>
-            <p>Welcome to my project! This section provides a brief overview of the project, its purpose, and its scope. 
-            Include a compelling reason why this project is interesting or valuable.</p>
+            <p>The dataset is two-folded, with the first named <b>recipes</b>, a dataset with 83782 rows and 12 columns. </p>
         </section>
+        
+        <h3>Recipe Data Description</h3>
+    <table>
+        <thead>
+            <tr>
+                <th>Column</th>
+                <th>Description</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>'name'</td>
+                <td>Recipe name</td>
+            </tr>
+            <tr>
+                <td>'id'</td>
+                <td>Recipe ID</td>
+            </tr>
+            <tr>
+                <td>'minutes'</td>
+                <td>Minutes to prepare recipe</td>
+            </tr>
+            <tr>
+                <td>'contributor_id'</td>
+                <td>User ID who submitted this recipe</td>
+            </tr>
+            <tr>
+                <td>'submitted'</td>
+                <td>Date recipe was submitted</td>
+            </tr>
+            <tr>
+                <td>'tags'</td>
+                <td>Food.com tags for recipe</td>
+            </tr>
+            <tr>
+                <td>'nutrition'</td>
+                <td>Nutrition information in the form [calories (#), total fat (PDV), sugar (PDV), sodium (PDV), protein (PDV), saturated fat (PDV), carbohydrates (PDV)]; PDV stands for “percentage of daily value”</td>
+            </tr>
+            <tr>
+                <td>'n_steps'</td>
+                <td>Number of steps in recipe</td>
+            </tr>
+            <tr>
+                <td>'steps'</td>
+                <td>Text for recipe steps, in order</td>
+            </tr>
+            <tr>
+                <td>'description'</td>
+                <td>User-provided description</td>
+            </tr>
+            <tr>
+                <td>'n_ingredients'</td>
+                <td>Number of ingredients in recipe</td>
+            </tr>
+            <tr>
+                <td>'ingredients'</td>
+                <td>Text for all ingredients</td>
+            </tr>
+        </tbody>
+    </table>
 
         <!-- Image and Caption Example -->
         <section>
