--- a/index.html
+++ b/index.html
@@ -197,6 +197,15 @@
         <!-- Image and Caption Example -->
         <section>
             <h2>Project Overview</h2>
+
+            <iframe
+              src="assets/cooking_time_boxplot.html"
+              width="800"
+              height="600"
+              frameborder="0"
+            ></iframe>
+
+            
             <div class="image-placeholder">[Image Placeholder]</div>
             <div class="caption">Figure 1: Placeholder for project image or diagram.</div>
             <p>Use this section to provide a high-level description of your project, including the main components and what it achieves. Add relevant diagrams or illustrations.</p>
