--- a/index.html
+++ b/index.html
@@ -81,6 +81,30 @@
             padding: 1em 0;
             margin-top: 2em;
         }
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            font-size: 12px; /* Adjust font size for readability */
+        }
+        th, td {
+            border: 1px solid #ddd;
+            padding: 8px;
+            text-align: left;
+        }
+        th {
+            background-color: #f2f2f2;
+        }
+        tr:nth-child(even) {
+            background-color: #f9f9f9;
+        }
+        tr:hover {
+            background-color: #f1f1f1;
+        }
+        .table-container {
+            overflow-x: auto;
+            white-space: nowrap; /* Prevent table from breaking lines */
+            max-height: 500px; /* Set a max height if needed */
+        }
     </style>
 </head>
 
@@ -201,13 +225,96 @@
             	<p>In the procedure of data cleaning, I firstly examine the data types of each feature, transforming each string-encoded feature into the original datatypes. For example, the column <i>ingredients</i> encodes lists of strings by single strings, where I employ <code>literal_eval</code> from the package <code>ast</code> for transformation. Thereafter, I remove data with any outliers in any numeric columns to improve generalization, which can also be examplified through the boxplot below in the section of <b>Univariate Analysis</b>. The head of the cleaned dataset is shown as below:</p>
 
 
+        	<h1>Recipe Table</h1>
+    <div class="table-container">
+        <table>
+            <thead>
+                <tr>
+                    <th>id</th>
+                    <th>minutes</th>
+                    <th>contributor_id</th>
+                    <th>n_steps</th>
+                    <th>n_ingredients</th>
+                    <th>user_id</th>
+                    <th>rating</th>
+                    <th>name</th>
+                    <th>submitted</th>
+                    <th>tags</th>
+                    <th>nutrition</th>
+                    <th>steps</th>
+                    <th>description</th>
+                    <th>ingredients</th>
+                    <th>date</th>
+                    <th>review</th>
+                    <th>average_rating</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>333281</td>
+                    <td>40</td>
+                    <td>985201</td>
+                    <td>10</td>
+                    <td>9</td>
+                    <td>386585</td>
+                    <td>4</td>
+                    <td>1 brownies in the world best ever</td>
+                    <td>2008-10-27</td>
+                    <td>['60-minutes-or-less', 'time-to-make', 'course', 'main-ingredient', 'preparation', 'for-large-groups', 'desserts', 'lunch', 'snacks', 'cookies-and-brownies', 'chocolate', 'bar-cookies', 'brownies', 'number-of-servings']</td>
+                    <td>[138.4, 10.0, 50.0, 3.0, 3.0, 19.0, 6.0]</td>
+                    <td>['heat the oven to 350f and arrange the rack in the middle', 'line an 8-by-8-inch glass baking dish with aluminum foil', 'combine chocolate and butter in a medium saucepan and cook over medium-low heat , stirring frequently , until evenly melted', 'remove from heat and let cool to room temperature', 'combine eggs , sugar , cocoa powder , vanilla extract , espresso , and salt in a large bowl and briefly stir until just evenly incorporated', 'add cooled chocolate and mix until uniform in color', 'add flour and stir until just incorporated', 'transfer batter to the prepared baking dish', 'bake until a tester inserted in the center of the brownies comes out clean , about 25 to 30 minutes', 'remove from the oven and cool completely before cutting']</td>
+                    <td>These are the most chocolatey, moist, rich, dense, fudgy, delicious brownies that you'll ever make.....seriously! There's no doubt that these will be your fav brownies ever for you can add things to them or make them plain.....either way they're pure heaven!</td>
+                    <td>['bittersweet chocolate', 'unsalted butter', 'eggs', 'granulated sugar', 'unsweetened cocoa powder', 'vanilla extract', 'brewed espresso', 'kosher salt', 'all-purpose flour']</td>
+                    <td>2008-11-19</td>
+                    <td>These were pretty good, but took forever to bake. I would send it ended up being almost an hour! Even then, the brownies stuck to the foil, and were on the overly moist side and not easy to cut. They did taste quite rich, though! Made for My 3 Chefs.</td>
+                    <td>4</td>
+                </tr>
+                <tr>
+                    <td>453467</td>
+                    <td>45</td>
+                    <td>1848091</td>
+                    <td>12</td>
+                    <td>11</td>
+                    <td>424680</td>
+                    <td>5</td>
+                    <td>1 in canada chocolate chip cookies</td>
+                    <td>2011-04-11</td>
+                    <td>['60-minutes-or-less', 'time-to-make', 'cuisine', 'preparation', 'north-american', 'for-large-groups', 'canadian', 'british-columbian', 'number-of-servings']</td>
+                    <td>[595.1, 46.0, 211.0, 22.0, 13.0, 51.0, 26.0]</td>
+                    <td>['pre-heat oven the 350 degrees f', 'in a mixing bowl , sift together the flours and baking powder', 'set aside', 'in another mixing bowl , blend together the sugars , margarine , and salt until light and fluffy', 'add the eggs , water , and vanilla to the margarine / sugar mixture and mix together until well combined', 'add in the flour mixture to the wet ingredients and blend until combined', 'scrape down the sides of the bowl and add the chocolate chips', 'mix until combined', 'scrape down the sides to the bowl again', 'using an ice cream scoop , scoop evenly rounded balls of dough and place of cookie sheet about 1 - 2 inches apart to allow for spreading during baking', 'bake for 10 - 15 minutes or until golden brown on the outside and soft & chewy in the center', 'serve hot and enjoy !']</td>
+                    <td>This is the recipe that we use at my school cafeteria for chocolate chip cookies. They must be the best chocolate chip cookies I have ever had! If you don't have margarine or don't like it, then just use butter (softened) instead.</td>
+                    <td>['white sugar', 'brown sugar', 'salt', 'margarine', 'eggs', 'vanilla', 'water', 'all-purpose flour', 'whole wheat flour', 'baking soda', 'chocolate chips']</td>
+                    <td>2012-01-26</td>
+                    <td>Originally I was gonna cut the recipe in half (just the 2 of us here), but then we had a park-wide yard sale, & I made the whole batch & used them as enticements for potential buyers ~ what the hey, a free cookie as delicious as these are, definitely works its magic! Will be making these again, for sure! Thanks for posting the recipe!</td>
+                    <td>5</td>
+                </tr>
+                <tr>
+                    <td>306168</td>
+                    <td>40</td>
+                    <td>50969</td>
+                    <td>6</td>
+                    <td>9</td>
+                    <td>29782</td>
+                    <td>5</td>
+                    <td>412 broccoli casserole</td>
+                    <td>2008-05-30</td>
+                    <td>['60-minutes-or-less', 'time-to-make', 'course', 'main-ingredient', 'preparation', 'side-dishes', 'vegetables', 'easy', 'beginner-cook', 'broccoli']</td>
+                    <td>[194.8, 20.0, 6.0, 32.0, 22.0, 36.0, 3.0]</td>
+                    <td>['preheat oven to 350 degrees', 'spray a 2 quart baking dish with cooking spray , set aside', 'in a large bowl mix together broccoli , soup , one cup of cheese , garlic powder , pepper , salt , milk , 1 cup of french onions , and soy sauce', 'pour into baking dish , sprinkle remaining cheese over top', 'bake for 25 minutes or until cheese is lightly browned', 'sprinkle with rest of french fried onions and bake until onions are browned and cheese is bubbly , about 10 more minutes']</td>
+                    <td>Since there are already 411 recipes for broccoli casserole posted to "zaar", I decided to call this one #412 broccoli casserole. I don't think there are any like this one in the database. I based this one on the famous "green bean casserole" from Campbell's soup. But I think mine is better since I don't like cream of mushroom soup. Submitted to "zaar" on May 28th, 2008</td>
+                    <td>['frozen broccoli cuts', 'cream of chicken soup', 'sharp cheddar cheese', 'garlic powder', 'ground black pepper', 'salt', 'milk', 'soy sauce', 'french-fried onions']</td>
+                    <td>2008-12-31</td>
+                    <td>This was one of the best broccoli casseroles that I have ever made. I made my own chicken soup for this recipe. I was a bit worried about the tsp of soy sauce but it gave the casserole the best flavor. YUM!</td>
+                    <td>5</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
             
-            <div class="image-placeholder">[Image Placeholder]</div>
-            <div class="caption">Figure 1: Placeholder for project image or diagram.</div>
             <p>Use this section to provide a high-level description of your project, including the main components and what it achieves. Add relevant diagrams or illustrations.</p>
           <h3>Univariate Analysis</h3>
           	<iframe
-              src="assets/rating_frequency_hist.html"
+              src="assets/cooking_time_boxplot.html"
               width="800"
               height="600"
               frameborder="0"
