--- a/index.html
+++ b/index.html
@@ -365,11 +365,13 @@
 
         <!-- Features Section -->
         <section>
-            <h2>Key Features</h2>
+            <h2>Assessment of Missingness</h2>
+            <p>We know that for most of the dataset, missingness is something that is both inevitable and significant to deal with. As we are trying to deal with the missingness in this dataset, let's review some relevant concept of the different kinds of missingness:</p>
             <ul>
-                <li>Feature 1: Brief description of the first feature.</li>
-                <li>Feature 2: Brief description of the second feature.</li>
-                <li>Feature 3: Brief description of the third feature.</li>
+                <li>Missing by design (MD): Data is intentionally left out or omitted in a planned manner, often to reduce participant burden, minimize costs.</li>
+                <li>Missing at random (MAR): The probability of being missing is the same only within groups defined by the observed data.</li>
+                <li>Not missing at random (NMAR): The chance that a value is missing depends on the actual missing value.</li>
+                <li>Missing completely at random (MCAR): The chance that a value is missing is completely independent of other columns and the actual missing value.</li>
             </ul>
         </section>
 
