--- a/index.html
+++ b/index.html
@@ -373,6 +373,8 @@
                 <li>Not missing at random (NMAR): The chance that a value is missing depends on the actual missing value.</li>
                 <li>Missing completely at random (MCAR): The chance that a value is missing is completely independent of other columns and the actual missing value.</li>
             </ul>
+            <p>Now let's take a look at one plausible column that may be NMAR, which is <b>rating</b></p>.
+            <p>The reason for holding such belief is not very complex: think of a scenario where you are a biased rich people, or to say old money. Then, it would be likely that you would discriminate against the recipes that represents lower social-economic classes, and thereby giving them a lower rating. If I am given more information about the reviewer's social-ecnomic classes as well as the class that each recipe represents, then from this specific aspect, it would become MAR while there are still rooms for other variables to be NMAR with.</p>
         </section>
 
         <!-- Images and Captions Section -->
