--- a/index.html
+++ b/index.html
@@ -373,8 +373,17 @@
                 <li>Not missing at random (NMAR): The chance that a value is missing depends on the actual missing value.</li>
                 <li>Missing completely at random (MCAR): The chance that a value is missing is completely independent of other columns and the actual missing value.</li>
             </ul>
+            <h3>NMAR Analysis</h3>
             <p>Now let's take a look at one plausible column that may be NMAR, which is <b>rating</b></p>.
             <p>The reason for holding such belief is not very complex: think of a scenario where you are a biased rich people, or to say old money. Then, it would be likely that you would discriminate against the recipes that represents lower social-economic classes, and thereby giving them a lower rating. If I am given more information about the reviewer's social-ecnomic classes as well as the class that each recipe represents, then from this specific aspect, it would become MAR while there are still rooms for other variables to be NMAR with.</p>
+            <h3>Missingness Dependency</h3>
+            <p>The permutation tests uses Total variance distance (TVD) for categorical features and Kolmogorov–Smirnov test for numeric features to test if the observed difference is significant so that the features are actually MAR. Here are some of the visualizations drawn from features that are relevant to the missingness of <code>rating</code> column:</p>
+            <iframe
+              src="assets/missingness.html"
+              width="800"
+              height="600"
+              frameborder="0"
+            ></iframe>
         </section>
 
         <!-- Images and Captions Section -->
