--- a/index.html
+++ b/index.html
@@ -384,6 +384,7 @@
               height="600"
               frameborder="0"
             ></iframe>
+            <p> Even by simply looking at the visualizations, we can tell that the distribution of each feature differs significantly with respect to whether the column <code>rating</code> is missing, confirming that the column <code> rating </code> is indeed MAR.</p>
         </section>
 
         <!-- Images and Captions Section -->
